samples/_failures_safe/1761624542_3ad008_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9669b351.c: In function ‘main’:
./samples/SAFE/__tmp_9669b351.c:166:5: error: expected expression at end of input
  166 |     for (int i = 0; i < edge_count; i++)
      |     ^~~
./samples/SAFE/__tmp_9669b351.c:166:5: error: expected declaration or statement at end of input
